--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "devicons-react": "^1.4.0",
+    "emailjs-com": "^3.2.0",
     "mdb-react-ui-kit": "^9.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-loader-spinner": "^6.1.6",
