--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
+    "react-flow": "^1.0.3",
     "react-helmet-async": "^2.0.5",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-loader-spinner": "^6.1.6",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^7.0.2",
+    "reactflow": "^11.11.4",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
