--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^7.0.2",
     "reactflow": "^11.11.4",
+    "sass": "^1.83.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
